--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,14 @@ TIME_WINDOW_SEC=10            # M2 default window length (seconds)
 REF_WINDOW_PULSES=100         # Z-ring size (N)
 QUALITY_JITTER_TAU=0.005      # jitter CV threshold for quality=OK (e.g., 0.005 = 0.5%)
 
+# --- Mock input ---
+FORCE_MOCK=1           # <— turn on software pulse source
+MOCK_HZ=10.0           # target pulse frequency for the mock
+MOCK_JITTER=0.02       # 0.02 = ~2% timing noise (set 0.0 for super clean)
+
+# --- DEMO mode ---
+DEMO_ON=0               # 1=enable demo mode (PPM_LIMIT = 3000)
+
 # --- Data / CSV rotation & Excel helper ---
 DATA_DIR=./data
 MAX_CSV_BYTES=10485760        # 10 MB
@@ -17,7 +25,7 @@ Z_SEND_ENABLED=1
 Z_SEND_INTERVAL_SEC=1
 Z_SEND_HOST=255.255.255.255   # default broadcast; ignored if PEER_LIST set
 Z_SEND_PORT=9787
-PEER_LIST=                     # comma-separated IPs for unicast (overrides broadcast)
+PEER_LIST=
 PEER_BIND=0.0.0.0             # UDP listen bind
 NODE_ID=pi5-node              # identifier in peer messages
 
