fix peer sync issue

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
+NODE_ID=pi-1              
+
 # --- GPIO / sampling ---
 GPIO_PIN=18
 EDGE_MODE=RISING              # RISING | FALLING | BOTH
@@ -27,7 +29,6 @@ Z_SEND_HOST=255.255.255.255   # default broadcast; ignored if PEER_LIST set
 Z_SEND_PORT=9787
 PEER_LIST=
 PEER_BIND=0.0.0.0             # UDP listen bind
-NODE_ID=pi5-node              # identifier in peer messages
 
 # --- Web server ---
 HOST=0.0.0.0
